# pr-agent

./: CLAUDE.md  README.md  pyproject.toml  release.sh
docs/superpowers/plans/: 2026-03-13-auto-ticket-generation.md  2026-03-13-pr-history.md  2026-03-31-remove-claude-code-default-vertex.md  2026-03-31-vertex-ai-provider.md
docs/superpowers/specs/: 2026-03-13-auto-ticket-generation-design.md  2026-03-13-pr-history-design.md  2026-03-31-vertex-ai-provider-design.md
src/: cli.py  config.py  git_operations.py  llm_client.py  pr_generator.py  pr_history.py  prompts.py
tests/: test_cli_history.py  test_cli_provider.py  test_cli_ticket.py  test_config.py  test_git_operations.py  test_llm_client.py  test_pr_generator.py  test_pr_history.py
